fixed css overlapping of header dropdown with tags filters

--- a/src/app/filters/styles/_filters-tags.scss
+++ b/src/app/filters/styles/_filters-tags.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 90%;
-    z-index: 99999;
+    z-index: 9999;
     ul {
         padding: 10px;
         list-style: none; 
